fix: update index.html text

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     "title": "糸島夏休み明けプロジェクト2025",
     "titleHtml": "糸島<br><span class='highlight'>夏休み明け</span><br>プロジェクト2025",
     "subtitle": "夏休み明けの初日、糸島に子どもの居場所をたくさん開けます。",
-    "intro": "夏休み明け，学校がはじまることでゆうつな気持ちになったりつらい思いをする人は多いと思います。子どもさんご本人も保護者の方も，そのゆううつさやつらさの程度がかなり強いひとも少なくないに違いありません。\n\nそこで，糸島の中で子どもに関わる支援をしているみなさんのご協力を得て，夏休み明け学校がはじまる日にふらっと行ける場所をたくさん用意することにしました。\n\nここに来るには予約もなにもいりません。来たいなと思ったら来てもらえればそれでよいのです。ちょっとのぞくだけでもぜ。明日のことは明日考えればよいのです。",
+    "intro": "夏休み明け，学校がはじまることでゆうつな気持ちになったりつらい思いをする人は多いと思います。子どもさんご本人も保護者の方も，そのゆううつさやつらさの程度がかなり強いひとも少なくないに違いありません。\n\nそこで，糸島の中で子どもに関わる支援をしているみなさんのご協力を得て，夏休み明け学校がはじまる日にふらっと行ける場所をたくさん用意することにしました。\n\nここに来るには予約もなにもいりません。来たいなと思ったら来てみてください。ちょっとのぞくだけでもぜひ。明日のことは明日考えればよいのです。",
     "date": "2025-08-27",
     "dateText": "8月27日（水）",
     "dateBadge": "夏休み明け初日！",
@@ -252,3 +252,4 @@
   </script>
 </body>
 </html>
+
