fix: 紹介文修正（木立，みんなの居場所）

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         "link": "https://itoshima-jidoclub.com/",
         "meta": "筑前前原駅から徒歩15分",
         "time": "10:00–17:00",
-        "desc": "子どもたちが描いた絵が壁一面に描いてあるのが目印の、篠原東の住宅街にある一軒家。ふだんは平日毎日開いています。うちの中ではボードゲームやアイロンビーズが人気。外では水遊びしたり、ツリーハウスでおやつ食べたりできます！思い思いにゆっくり過ごすこともできる場所。"
+        "desc": "子どもたちが描いた絵が壁一面に描いてあるのが目印の、篠原東の住宅街にある一軒家。ふだんは平日毎日開いています。みなさん思い思いにマイペースで過ごしています。今年は木陰にベンチができました。風に吹かれながらのんびり過ごすのもいいですよ。"
       },
       {
         "name": "ゆめふうせん（有田中央）",
@@ -176,9 +176,9 @@
         "desc": "ゆらりんこ橋のすぐ近く、２本の川と山に囲まれた、ゆっくり遊べるところです。ヤギが6頭、のんびり草を食んでいます。ふだんは水曜と日曜会員制で開けてますが、今回はふらりと来てOK!"
       },
       {
-        "name": "森のフリースクール木立（前原）",
+        "name": "森のフリースクール木立（王丸）",
         "link": "https://www.google.com/maps/place/%E6%A3%AE%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%E3%82%B9%E3%82%AF%E3%83%BC%E3%83%AB+%E6%9C%A8%E7%AB%8B/",
-        "meta": "前原エリア",
+        "meta": "波多江駅から車で15分",
         "time": "9:00–15:00",
         "desc": "王丸の森に囲まれた古民家。ふだんはフリースクールとして開いています。水がおいしくて、黒ネコがいて、ゆっくりしても走り回っても大丈夫！"
       }
