fix: 紹介文修正（交通情報）

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       {
         "name": "うみのね（二丈深江）",
         "link": "https://www.google.com/maps/place/%E3%81%86%E3%81%BF%E3%81%8B%E3%81%88%E3%82%8B/@33.5130176,130.128239,17z",
-        "meta": "二丈深江エリア",
+        "meta": "筑前深江駅から徒歩15分",
         "time": "9:00–15:00",
         "desc": "深江の海のそばにある古民家コミュニティスペース「うみかえる」で開かれている居場所です。海岸まで本当にすぐそば。海がこれはもう、めちゃくちゃきれいです。古いお家でギシギシいうけど落ち着ける不思議な場所。夏の間は正直暑いけど，ギシギシいう家がおもしろい！"
       },
@@ -171,7 +171,7 @@
       {
         "name": "わんぱく塾（二丈福井）",
         "link": "https://www.google.com/maps/place/%E3%82%8F%E3%82%93%E3%81%B1%E3%81%8F%E5%A1%BE/@33.4909618,130.1000922,17z",
-        "meta": "二丈福井エリア",
+        "meta": "筑前深江駅から車で10分",
         "time": "10:00–16:00",
         "desc": "ゆらりんこ橋のすぐ近く、２本の川と山に囲まれた、ゆっくり遊べるところです。ヤギが6頭、のんびり草を食んでいます。ふだんは水曜と日曜会員制で開けてますが、今回はふらりと来てOK!"
       },
