fix:地図情報修正2

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       },
       {
         "name": "森のフリースクール木立（王丸）",
-        "link": "https://www.google.com/maps/place/%E6%A3%AE%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%E3%82%B9%E3%82%AF%E3%83%BC%E3%83%AB+%E6%9C%A8%E7%AB%8B/",
+        "link": "https://maps.app.goo.gl/LmLFcNM8tySFXeNV6",
         "meta": "波多江駅から車で15分",
         "time": "9:00–15:00",
         "desc": "王丸の森に囲まれた古民家。ふだんはフリースクールとして開いています。水がおいしくて、黒ネコがいて、ゆっくりしても走り回っても大丈夫！"
