fix: 文言修正（みんなの居場所）

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         "link": "https://itoshima-jidoclub.com/",
         "meta": "筑前前原駅から徒歩15分",
         "time": "10:00–17:00",
-        "desc": "子どもたちが描いた絵が壁一面に描いてあるのが目印の、篠原東の住宅街にある一軒家。ふだんは平日毎日開いています。みなさん思い思いにマイペースで過ごしています。今年は木陰にベンチができました。風に吹かれながらのんびり過ごすのもいいですよ。"
+        "desc": "子どもたちが描いた壁一面の絵が目印の、篠原東の1住宅街にある一軒家。ふだんは平日毎日開いています。みなさん思い思いにマイペースで過ごしています。今年は木陰にベンチができました。風に吹かれながらのんびり過ごすのもいいですよ。"
       },
       {
         "name": "ゆめふうせん（有田中央）",
